bookinfo/bookinfo-service.yaml
# bookinfo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage
  namespace: bookinfo
spec:
  type: NodePort
  ports:
  - port: 9080
    targetPort: 9080
    protocol: TCP
    name: http
  selector:
    app: productpage
